# stand-with-ukraine-backend

./: .dockerignore  .editorconfig  .env  .env-example  .gitignore  .rusty-hook.toml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  backend-service.yaml  codecov.yml  exporter-job.yaml  run-service.yaml  spec.yaml  sqlx-data.json
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: CODEOWNERS  bug_report.md
.github/workflows/: app.yaml  clean-up.yaml  cleanup-digital-ocean-container-registry.yaml  exporter.yaml  general.yaml  rust.yaml  security-audit.yaml  server.yaml
.sqlx/: query-20f522c74fee80aebdb7450afcc064474a653100592b220eda67db3ec404d70b.json  query-5ca043250709b09e58c15542b322ceea22526ff887a41d19e0ca9b57237c22ac.json  query-74167901d241029e7aa5ec3bcd49f7d84fc3cd9043c9a2cfe8dac7a80bdc0ce5.json  query-f61338aa051a3a81e92b5c91fbc48d3c5a45fe3deca0c6532fb8cc9a719579da.json
app/: .dockerignore  Dockerfile
app/configuration/: base.yaml
app/src/: configuration.rs  lib.rs  startup.rs
app/tests/e2e/: helpers.rs  main.rs
app/tests/e2e/mocks/: mod.rs
apps/exporter/: .dockerignore  Cargo.toml  Dockerfile  sqlx-data.json
apps/exporter/.sqlx/: query-160f46bff52803da4b2d2631f04ded52273f742cd238e638a4c7e6fac7aa03cd.json  query-16ec0ea056c4c6aba9837b90f4dffba011a700cf45cdf96094bbcad0b20de056.json  query-22fbdabbd2a8d2135169ecc53d0ee3038d2c2b03aa500e099f0172470ddc3254.json  query-234741a79e9861917d5701f9295bf2321660e695c5b02137bc0b16aa8a4dfc9e.json  query-30c2572effa6a53c59b8ec57ea019ea78235a427007c2b62ac7be9f81feb9e3f.json  query-56233a8901131d539dcb562b66d0e2d3bfe6226dbc6cc05f7efb7b1f85e12c01.json  query-65a0c884cd37d1b384a0c88b0ef89f43d4f003dff66cb7f030155b830b650252.json  query-6d4f9de8180dccaa71801dd55e01e029d6e3b53e175d98948e8f292afce6ec15.json  query-82f438f197114b0bf39ff73fa6e43b2737f111551396ffd53610786519796279.json  query-a1374c9626cc38c8095d779b57445a161b4ca2a516d5097eeeb6497674218f57.json  query-c7651b8cec54a14708a1cc7fe4e90afb76e2d6cf0d85399ffd0d1c658f3d4f9b.json  query-ea92a0d130fec78ee1f88cc529ee67d1d1247d174c45d586e5f9ccd56cdaeeb0.json
apps/exporter/configuration/: base.yaml
apps/exporter/src/: configuration.rs  main.rs  report.rs  sheets.rs  startup.rs  time.rs
apps/server/: Cargo.toml  Dockerfile  sqlx-data.json
apps/server/.sqlx/: query-3411e71ceec7b03612394da030bf96bfa364790f0c82c57ac45015f8b31cbb27.json
apps/server/configuration/: base.yaml
apps/server/src/: authentication.rs  configuration.rs  data.rs  google_trace_context_propagator.rs  lib.rs  liq_pay.rs  main.rs  startup.rs  state.rs  telemetry.rs
apps/server/src/bigcommerce/: auth.rs  client.rs  script.rs  store.rs
apps/server/src/payment_buttons/: action.rs  currency.rs  language.rs  links.rs  liqpay_client.rs  mod.rs
apps/server/src/routes/: bigcommerce.rs  mod.rs  pay.rs  payment_buttons.rs  widget.rs
apps/server/tests/e2e/: helpers.rs  main.rs  pay.rs
apps/server/tests/e2e/bigcommerce/: mod.rs
apps/server/tests/e2e/mocks/: get_scripts.json  mod.rs
apps/server/tests/e2e/widget/: analytics.rs  configuration.rs  publish.rs
configuration/: base.yaml  local.yaml  production.yaml
exporter/: Cargo.toml  Dockerfile  configuration.yaml  sqlx-data.json
exporter/src/: configuration.rs  sheets.rs  startup.rs
migrations/: 20220418001504_initialize_database.sql  20220422232334_add_index_on_store_hash.sql  20220425221816_add_columns_to_store.sql  20220511162838_add_table_for_log_events.sql  20220516223409_add_table_for_unpublish_event.sql  20220603161934_increase_unpublish_reason_length.sql  20220729185946_update_analytics_tables.sql  20230111171805_add_table_for_feedback_form.sql  20230111201044_change_feedback_form_table_name.sql  20230216161815_track_universal_installs_and_events.sql
otel/: Dockerfile
otel-collector/: Dockerfile  config.yaml
scripts/: connect_local_db.sh  create_env.sh  generate_offline_query_data.sh  init_db.sh  pre_push.sh
src/: authentication.rs  bigcommerce.rs  configuration.rs  data.rs  main.rs  startup.rs  telemetry.rs
src/bigcommerce/: auth.rs  client.rs  mod.rs  script.rs
src/routes/: api.rs  bigcommerce.rs  bigcommerce_oauth.rs  mod.rs  widget.rs
tests/api/: api.rs  auth.rs  bigcommerce_oauth.rs  health_check.rs  helpers.rs  main.rs
tests/e2e/: bigcommerce.rs  bigcommerce_oauth.rs  configuration.rs  health_check.rs  helpers.rs  main.rs  publish.rs
tests/e2e/api/: configuration.rs  mod.rs  publish.rs
tests/e2e/api/fixtures/: create_script.json  delete_script.json  get_scripts.json  get_store.json
tests/e2e/bigcommerce/: mod.rs
tests/e2e/mocks/: get_oauth2_token.json  get_scripts_existing.json
tests/e2e/widget/: analytics.rs  mod.rs  publish.rs
