[package]
name = "swu-app"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "swu-app"

[dependencies]
actix-web = "4.0.1"
base64 = "0.13.0"
config = "0.13.1"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde-aux = { version = "3.0.1", default-features = false }
time = { version = "0.3.9", features = ["std"] }
tracing = { version = "0.1.34", features = ["log"] }
tracing-actix-web = "0.5.1"
opentelemetry = "0.17.0"
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.11", features = [
	"registry",
	"env-filter",
] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.17.2"
once_cell = "1.10.0"
uuid = { version = "0.8.2", features = ["v4"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
anyhow = "1.0.57"
jsonwebtoken = "8.1.0"
actix-web-httpauth = "0.6.0"
actix-cors = "0.6.1"

[dependencies.sqlx]
version = "0.5.11"
default-features = false
features = [
	"runtime-actix-rustls",
	"macros",
	"postgres",
	"uuid",
	"time",
	"migrate",
	"offline",
	"json",
]

[dependencies.reqwest]
version = "0.11.10"
features = ["json", "rustls-tls"]
default-features = false

[dependencies.tokio]
version = "1.17.0"
features = ["macros", "rt-multi-thread"]

[dev-dependencies]
rstest = "0.12.0"
wiremock = "0.5.12"
