[package]
name = "swu-exporter"
version = "0.1.0"
edition = "2021"


[dependencies]
swu-app = { path = "../app" }
google-sheets4 = "3.1.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
config = "0.13.1"

[dependencies.tokio]
version = "1.17.0"
features = ["macros", "rt-multi-thread"]

[dependencies.sqlx]
version = "0.5.11"
default-features = false
features = [
	"runtime-actix-rustls",
	"macros",
	"postgres",
	"uuid",
	"time",
	"migrate",
	"offline",
	"json",
]
