[package]
name = "swu-exporter"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "swu-exporter"

[dependencies]
swu-app = { path = "../server" }
google-sheets4 = "5.0.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.104"
time = { version = "0.3.25", features = ["std"] }
config = "0.13.3"
dotenvy = "0.15.7"

[dependencies.tokio]
version = "1.29.1"
features = ["macros", "rt-multi-thread"]

[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"time",
	"migrate",
	"json",
]

[dev-dependencies]
rstest = "0.18.1"
rand = "0.8.5"
rusty-hook = "^0.11.2"
