[package]
name = "swu-app"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "swu-app"

[dependencies]
actix-cors = "0.6.4"
actix-utils = "3.0.1"
actix-web = "4.4.0"
actix-web-httpauth = "0.8.1"
anyhow = "1.0.75"
base64 = "0.21.4"
config = "0.13.3"
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.19.0", features = ["rt-tokio"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.108"
serde-aux = { version = "4.2.0", default-features = false }
thiserror = "1.0.50"
time = { version = "0.3.30", features = ["std"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.8"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
tracing-opentelemetry = "0.21.0"
tracing-subscriber = { version = "0.3.17", features = [
  "registry",
  "env-filter",
] }
uuid = { version = "1.4.1", features = ["v4"] }
dotenvy = "0.15.7"
email_address = "0.2.4"

[dependencies.reqwest]
version = "0.11.20"
features = ["json", "rustls-tls"]
default-features = false

[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "time",
  "migrate",
  "json",
]

[dependencies.tokio]
version = "1.32.0"
features = ["macros", "rt-multi-thread"]

[dev-dependencies]
rstest = "0.18.2"
wiremock = "0.5.19"
rusty-hook = "^0.11.2"
