[package]
name = "swu-app"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "swu-app"

[dependencies]
anyhow = "1.0.82"
base64 = "0.22.0"
config = "0.14.0"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
opentelemetry = { version = "0.22.0", features = ["trace"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde-aux = { version = "4.5.0", default-features = false }
thiserror = "1.0.58"
time = { version = "0.3.36", features = ["std"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.18", features = [
  "registry",
  "env-filter",
] }
uuid = { version = "1.8.0", features = ["v4"] }
dotenvy = "0.15.7"
email_address = "0.2.4"
sha1 = "0.10.6"
assert-json-diff = "2.0.2"
opentelemetry-otlp = { version = "0.15.0" }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-tracing-opentelemetry = "0.19.0"
regex = "1.10.4"
opentelemetry-stackdriver = { version = "0.19.1", features = ["propagator"] }

[dependencies.axum]
version = "0.7.5"
features = ["default", "tokio", "tracing", "macros", "json"]

[dependencies.reqwest]
version = "0.12.3"
features = ["json", "rustls-tls"]
default-features = false

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
  "runtime-tokio",
  "tls-rustls",
  "macros",
  "postgres",
  "uuid",
  "time",
  "migrate",
  "json",
]

[dependencies.tokio]
version = "1.37.0"
features = ["macros", "rt-multi-thread", "signal"]

[dev-dependencies]
rstest = "0.19.0"
wiremock = "0.6.0"
rusty-hook = "^0.11.2"

[package.metadata.cargo-udeps.ignore]
normal = ["assert-json-diff"]
